# GPTOOL

./: .gitattributes  .gitignore  GPTOOL_Codex_Infinite_World_Generation_Instructions.txt  GPTOOL_Codex_One_Hour_Task_Queue_Pass15.txt  README.md  README_LOCAL_COPY.md  RELEASE_NOTES.md  RUN_ME_FIRST.md  bridge.py  requirements.txt
VR/: main.py  requirements.txt
VR/etchline_xr_world_walk_v042/: README.md  _capture.py  _capture_blaster.py  _capture_combat.py  _capture_combat_loop.py  _capture_combo.py  _capture_current.py  _capture_day_sword.py  _capture_invert.py  _capture_perf.py  main.py  pyproject.toml  requirements-xr.txt  requirements.txt  xr_lab_config.json  xr_world_walk_config.json
VR/etchline_xr_world_walk_v042/p3dopenxr/: __init__.py  actionset.py  app.py  app.py.bak  builder_core.py  diagnostics.py  instance.py  p3dopenxr.py  pose.py  session.py  space.py
VR/etchline_xr_world_walk_v042/patch_notes/: patch_20260404_031330.md
VR/etchline_xr_world_walk_v042/tests/: test_builder_core.py
adapters/: panda3d_adapter.py
command_bridge/: __init__.py  planner.py  verifier.py
diagnostics/: crash_parser.py  env_probe.py  pre_submit_gate.py  regression_checker.py  reminder_checkpoint_validator.py  screenshot_memory_updater.py  step_gate_engine.py
docs/: AI_COMMAND_ACCURACY_PASS.md  ANTI_HEROES_GPTOOL_PROFILE.md  CRASH_DIAGNOSTICS_PASS.md  CRASH_SAFE_CONTROLS_PASS.md  GAME_TEMPLATE_GENERATOR_PASS.md  GITHUB_RELEASE_GUIDE.md  HOLOVERSE_FAUNA_PREVIEW_PASS17.md  HUMAN_PLAYER_RECOVERY.md  LEAN_PACKAGE_PASS.md  PANDA3D_HEADLESS_PROOF_PASS.md  PANDA3D_RUNTIME_PASS.md  (+6 more)
(+90 files in other folders)
